// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.api.v1;

import "com/digitalasset/canton/domain/api/v0/sequencer_connection.proto";
import "scalapb/scalapb.proto";

message SequencerConnections {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StorageProtoVersion";

  repeated com.digitalasset.canton.domain.api.v0.SequencerConnection sequencer_connections = 1;

  // This field determines the minimum level of agreement, or consensus, required among the sequencers before a message
  // is considered reliable and accepted by the system.
  // The value set here should not be zero. However, to maintain backward compatibility with older clients, a zero value
  // is interpreted as equivalent to the size of sequencer_connections.
  uint32 sequencerTrustThreshold = 2;
}
