// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v1;

import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

message SignedContent {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  google.protobuf.BytesValue content = 1;
  // now repeated, was not repeated in v0
  repeated com.digitalasset.canton.crypto.v0.Signature signatures = 2;
  google.protobuf.Timestamp timestamp_of_signing_key = 3;
}
